log
Thu 16 Mar 2023 03:25:19 PM UTC: 
 tests:  0|7
total_score: 0/70
3ba8bbf
Thu 16 Mar 2023 03:31:49 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:3: error: ‘temp’ undeclared (first use in this function)
   16 |   temp=*a;
      |   ^~~~
exercises.c:16:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6bad782
Thu 16 Mar 2023 03:32:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1d947e4
Thu 16 Mar 2023 03:49:27 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|6
total_score: 10/70
cc7fef9
Thu 16 Mar 2023 03:51:41 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|6
total_score: 10/70
6ee5685
Thu 16 Mar 2023 03:53:47 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:12: error: subscripted value is neither array nor pointer nor vector
   32 |       if (n[i]> *max)
      |            ^
exercises.c:34:15: error: subscripted value is neither array nor pointer nor vector
   34 |         *max=n[i];
      |               ^
exercises.c:36:16: error: subscripted value is neither array nor pointer nor vector
   36 |           if (n[i]< *min)
      |                ^
exercises.c:38:15: error: subscripted value is neither array nor pointer nor vector
   38 |         *min=n[i];
      |               ^
Compilation failed
3a858d3
Thu 16 Mar 2023 03:54:43 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|6
total_score: 10/70
716d1da
Thu 16 Mar 2023 03:58:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ecc8e22
